# neuroskies

./: README.md  app.py  docker-compose.yml  pyproject.toml
.github/workflows/: config.yml
datasets/: uploader.py
lambdas/metrics/: function.py
lambdas/reducers/: function.py
lambdas/tokens/: function.py
models/: constants.py  evolvers.py  interpolators.py  upsamplers.py
